src/objects/Processing_Application_Review__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_date_within_120_days__c</fullName>
        <description>Is the Acceptance Date within 120 days of the Disaster&apos;s End Date?</description>
        <inlineHelpText>Is the Acceptance Date within 120 days of the Disaster&apos;s End Date?</inlineHelpText>
        <label>Acceptance date within 120 days?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adjusted_Net_Worth_Affiliates__c</fullName>
        <label>Adjusted Net Worth - Affiliates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Net_Worth_Applicant__c</fullName>
        <label>Adjusted Net Worth - Applicant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Net_Worth_Individuals__c</fullName>
        <label>Adjusted Net Worth - Individuals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjusted_Net_Worth_Ratio__c</fullName>
        <label>Adjusted Net Worth Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Does_Not_Have_Credit_Elsewhere__c</fullName>
        <label>Applicant Does Not Have Credit Elsewhere</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Applicant_Eligibility_Test_Comments__c</fullName>
        <label>Applicant Eligibility Test Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Applicant_Eligibility_Test_Time__c</fullName>
        <label>Applicant Eligibility Test- Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Applicant_Eligibility_Test__c</fullName>
        <formula>IF(AND( 
ISPICKVAL(U_S_Citizen__c,&quot;Pass&quot;), 
ISPICKVAL(No_Character_Issues__c,&quot;Pass&quot;)), 

&quot;Pass&quot;, 

IF(AND( 
OR(ISPICKVAL(U_S_Citizen__c,&quot;Pass&quot;),ISPICKVAL(U_S_Citizen__c,&quot;Mitigated&quot;)), 
OR(ISPICKVAL(No_Character_Issues__c,&quot;Pass&quot;),ISPICKVAL(No_Character_Issues__c,&quot;Mitigated&quot;))), 

&quot;Mitigated&quot;, 

&quot;Fail&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Eligibility Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_agreeable_to_proposed_amount__c</fullName>
        <label>Applicant agreeable to proposed amount?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <formula>Application__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Links the Processing Application Review record with the appropriate Application record</description>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Exception Tests</relationshipLabel>
        <relationshipName>Processing_Application_Review</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Test_Ratio__c</fullName>
        <formula>Application__r.CET_Net_Available_Worth__c /  Total_Uncompensated_Physical_Loss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Test Ratio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset_Test_Result_Date__c</fullName>
        <description>Field displays the Date/Time when the Asset Test was conducted and finalized</description>
        <label>Asset Test Result Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Asset_Test_Result__c</fullName>
        <label>Asset Test Result</label>
        <picklist>
            <picklistValues>
                <fullName>Market Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Market Rate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AutoApprovalTest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoApprovalTest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basic_EIDL_Eligibility_Established__c</fullName>
        <label>Basic EIDL Eligibility Established?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benchmark_Pament__c</fullName>
        <label>Benchmark Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Benchmark_Payment__c</fullName>
        <formula>(( Application__r.Disaster_Declaration__r.High_Interest_Rate__c /12) *  Total_Uncompensated_Physical_Loss__c )/(1-((1+Application__r.Disaster_Declaration__r.High_Interest_Rate__c /12)^-180))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benchmark Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Interruption_Insurance_Recovery__c</fullName>
        <description>Business Interruption Insurance Recovery</description>
        <inlineHelpText>Business Interruption Insurance Recovery</inlineHelpText>
        <label>Business Interruption Insurance Recovery</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CASAD_Affiliates__c</fullName>
        <label>CASAD - Affiliates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CASAD_Applicant__c</fullName>
        <label>CASAD - Applicant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CASAD_Individuals__c</fullName>
        <label>CASAD - Individuals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CBRA_or_OPA__c</fullName>
        <description>Property is not in a CBRA or OPA</description>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <inlineHelpText>Property is not in a CBRA or OPA</inlineHelpText>
        <label>CBRA or OPA</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_Available_Total__c</fullName>
        <formula>CASAD_Affiliates__c  +  CASAD_Applicant__c  +  CASAD_Individuals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash Available Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Available__c</fullName>
        <label>Cash Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Test_Result_Date__c</fullName>
        <description>Field indicates the Date/Time of when Cash Flow Test was completed</description>
        <label>Cash Flow Test Result Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Test_Result_Market_or_Below_M__c</fullName>
        <label>Cash Flow Test Result (Market or Below M</label>
        <picklist>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Market</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cash_Flow_Test__c</fullName>
        <label>Cash Flow Test</label>
        <picklist>
            <picklistValues>
                <fullName>Market Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Market Rate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Collateral_Test_Comments__c</fullName>
        <label>Collateral Test Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Collateral_Test_Result_Date__c</fullName>
        <label>Collateral Test Result Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Collateral_Test__c</fullName>
        <formula>&quot;Pass&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collateral Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_for_the_Recommended_decision__c</fullName>
        <label>Comments for the Recommended Decision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condo_HOA_fee_not_listed_on_Application__c</fullName>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <label>Condo/HOA fee not listed on Application</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contents_Motor_Vehicle_Limit__c</fullName>
        <defaultValue>40000</defaultValue>
        <label>Contents and Motor Vehicle Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Analysis_Result_Date__c</fullName>
        <label>Credit Analysis Result Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Analysis_Status__c</fullName>
        <description>Formula field will display a Red Flag if the test result status is Failed; Yellow Flag if Mitigated.</description>
        <formula>IF( 

ISPICKVAL(  Credit_Analysis_Test__c  , &quot;Fail&quot;), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;), 

IF(ISPICKVAL( Credit_Analysis_Test__c, &quot;Mitigated&quot;), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow Flag&quot;), 

NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Analysis Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Analysis_Test_Comments__c</fullName>
        <label>Credit Analysis Test Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Analysis_Test__c</fullName>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <label>Credit Analysis Test</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Elsewhere_Test_Result_Date__c</fullName>
        <description>Field indicates the date/time the Credit Elsewhere Test Result is completed</description>
        <label>Credit Elsewhere Test Result Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Elsewhere_Test__c</fullName>
        <formula>IF(ISPICKVAL(Hardship_Waiver__c , &quot;Yes&quot;),&quot;Below Market Rate&quot;,
IF (  
(ISPICKVAL( Credit_Score_Test__c , &quot;Market Rate&quot;) &amp;&amp; ISPICKVAL( Cash_Flow_Test__c , &quot;Market Rate&quot;))

||  

(ISPICKVAL( Cash_Flow_Test__c , &quot;Market Rate&quot;) &amp;&amp; ISPICKVAL( Asset_Test_Result__c , &quot;Market Rate&quot;))

||

(ISPICKVAL(Asset_Test_Result__c, &quot;Market Rate&quot;) &amp;&amp; ISPICKVAL(   Credit_Score_Test__c  , &quot;Market Rate&quot;)),

&quot;Market Rate&quot;, &quot;Below Market Rate&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Elsewhere Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Test_Result_Date__c</fullName>
        <description>Field used to time stamp the date the Credit Score Test was conducted and finalized</description>
        <label>Credit Score Test Result Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Score_Test__c</fullName>
        <label>Credit Score Test</label>
        <picklist>
            <picklistValues>
                <fullName>Market Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Market Rate</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Damaged_Address_IRS_CBR_Match__c</fullName>
        <description>Damaged property address matches IRS or CBR address</description>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <inlineHelpText>Damaged property address matches IRS or CBR address</inlineHelpText>
        <label>Damaged Address IRS/CBR Match</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Owned_by_Applicants__c</fullName>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <label>Damaged Property Owned by Applicants</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Type_Eligibility__c</fullName>
        <description>Damaged Property Type not a Co-Op, Boat, Vessel, Vacant Land</description>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <inlineHelpText>Damaged Property Type not a Co-Op, Boat, Vessel, Vacant Land</inlineHelpText>
        <label>Damaged Property Type Eligibility</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Debt_Must_Be_Secured_By_Eligible_Lien__c</fullName>
        <label>[Debt Must Be Secured By Eligible Lien</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detailed_Description_for_the_Reason_Code__c</fullName>
        <inlineHelpText>Please provide detailed description for selecting &quot;Other&quot; as the Decline/withdraw Reason code</inlineHelpText>
        <label>Detailed Description for the Reason Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Did_Lien_Exist_Prior_to_disaster__c</fullName>
        <label>Did Lien Exist Prior to Disaster?</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EIDL_Phase_Determination__c</fullName>
        <label>EIDL Phase Determination</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligibility_Test_Comments__c</fullName>
        <label>Eligibility Test Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligibility_Test_Result_Date__c</fullName>
        <label>Eligibility Test Result Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Eligibility_Test_Result__c</fullName>
        <label>Eligibility Test Result</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibility_Test__c</fullName>
        <formula>IF(AND(Miscellaneous_Exceptions_Test__c = &quot;Pass&quot;, Applicant_Eligibility_Test__c = &quot;Pass&quot;, Property_Eligibility_Test__c = &quot;Pass&quot;),

&apos;Pass&apos;, 

&apos;Fail&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligibility Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_Business_Activity__c</fullName>
        <label>Eligible Business Activity?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligible_Control__c</fullName>
        <label>Eligible Control</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligible_Location__c</fullName>
        <label>Eligible Location?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligible_Physical_Loss_Comments__c</fullName>
        <description>Comments for the Eligible Physical Loss table</description>
        <label>Eligible Physical Loss Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligible_Physical_Loss_Override__c</fullName>
        <label>Eligible Physical Loss Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligible_Primary_Activity__c</fullName>
        <label>Eligible Primary Activity?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eligible_Small_Concern__c</fullName>
        <label>Eligible Small Concern</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Payment__c</fullName>
        <description>This field is used for display purposes only, visible in the Repayment Test section, which displays all data points used to run the Repayment Eligibility Test.</description>
        <formula>Application__r.Estimated_Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exceeds_Standard_MAFD_Amount__c</fullName>
        <description>This field is used for display purposes only, visible in the Repayment Test section, which displays all data points used to run the Repayment Eligibility Test.</description>
        <formula>Application__r.Exceeds_Standard_MAFD_Amt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceeds Standard MAFD Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exceeds_Standard_MAFD__c</fullName>
        <description>This field is used for display-purposes only, visible in the Repayment Test section, which displays all data points used to run the Repayment Eligibility Test.</description>
        <formula>Application__r.Exceeds_Standard_MAFD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exceeds Standard MAFD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GM_3_Business_Interruption__c</fullName>
        <formula>Gross_Margin_12_x_Injury_Period__c / 3  -  Business_Interruption_Insurance_Recovery__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM/3 (-) Business Interruption</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grants_not_listed_on_application__c</fullName>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <label>Grants not listed on application</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Annual_Income__c</fullName>
        <description>The field shows the gross annual income of applicants associated to the application. This field is used for display purposes only, visible in the Repayment Test section, which displays all data points used to run the Repayment Eligibility Test.</description>
        <formula>Application__r.Gross_Annual_Income2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Annual Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_12_x_Injury_Period__c</fullName>
        <formula>Gross_Margin__c / 12  *  Number_of_Months_in_Injury_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin / 12 x Injury Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Margin_3__c</fullName>
        <formula>Gross_Margin__c / 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Margin / 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <description>Entered Gross Margin</description>
        <inlineHelpText>Entered Gross Margin</inlineHelpText>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hardship_Waiver__c</fullName>
        <label>Hardship Waiver</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Highest_Credit_Score__c</fullName>
        <description>Field displays the highest credit score of all applicants associated to the application. This field is used for display purposes only, visible in the Repayment Test section, which displays all data points involved in the Repayment Eligibility Test.</description>
        <formula>Application__r.Highest_Credit_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Highest Credit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IRS_Transcript_s_Received__c</fullName>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <inlineHelpText>IRS Transcript(s) Received and its not = &quot;No Record Found&quot;</inlineHelpText>
        <label>IRS Transcript(s) Received</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>In_operation_at_least_1_year_prior__c</fullName>
        <description>Has the applicant bee in operation for at least one year prior to the disaster?</description>
        <inlineHelpText>Has the applicant bee in operation for at least one year prior to the disaster?</inlineHelpText>
        <label>In operation at least 1 year prior?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <description>This field is used for display purposes only, visible in the Repayment Test section, which displays all data points used to run the Repayment Eligibility Test.</description>
        <formula>Application__r.Low_Interest_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lien_Not_Due_To_Taxes_Mechanics_etc__c</fullName>
        <label>Lien Not Due To Taxes, Mechanics, etc.</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lien_not_owned_by_Fed_St_or_Local_Gov__c</fullName>
        <label>Lien not owned by Fed, St or Local Gov</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Recommendation__c</fullName>
        <label>Loan Officer&apos;s Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>Approve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdraw</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MAFD__c</fullName>
        <description>Monthly Allowed Fixed Debt</description>
        <inlineHelpText>Monthly Allowed Fixed Debt (%)</inlineHelpText>
        <label>MAFD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ManualApprovalProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ManualApprovalProcess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Loan_Amount__c</fullName>
        <label>Maximum Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Military_Reservist_EIDL__c</fullName>
        <label>Military Reservist EIDL?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Exceptions_Test_Time__c</fullName>
        <label>Miscellaneous Exceptions Test- Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Exceptions_Test__c</fullName>
        <formula>IF(AND( 
ISPICKVAL(Condo_HOA_fee_not_listed_on_Application__c, &quot;Pass&quot;), 
ISPICKVAL(Grants_not_listed_on_application__c, &quot;Pass&quot;), 
ISPICKVAL(IRS_Transcript_s_Received__c, &quot;Pass&quot;), 
ISPICKVAL(Not_an_SBA_Employee__c, &quot;Pass&quot;)), 

&quot;Pass&quot;, 

IF(AND( 
OR(ISPICKVAL(Condo_HOA_fee_not_listed_on_Application__c, &quot;Pass&quot;), ISPICKVAL(Condo_HOA_fee_not_listed_on_Application__c, &quot;Mitigated&quot;)), 
OR(ISPICKVAL(Grants_not_listed_on_application__c, &quot;Pass&quot;) , ISPICKVAL(Grants_not_listed_on_application__c, &quot;Mitigated&quot;)), 
OR(ISPICKVAL(IRS_Transcript_s_Received__c, &quot;Pass&quot;), ISPICKVAL(IRS_Transcript_s_Received__c, &quot;Mitigated&quot;)), 
OR(ISPICKVAL(Not_an_SBA_Employee__c, &quot;Pass&quot;), ISPICKVAL(Not_an_SBA_Employee__c, &quot;Mitigated&quot;))), 

&quot;Mitigated&quot;, 

&quot;Fail&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Miscellaneous Exceptions Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miscellaneous_Test_Comments__c</fullName>
        <label>Miscellaneous Test Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Fixed_Debt__c</fullName>
        <description>This field is used for display purposes only, visible in the Repayment Test section, which displays all data points used to run the Repayment Eligibility Test.</description>
        <formula>Application__r.Monthly_Fixed_Debt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Fixed Debt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NEMIS_Primary__c</fullName>
        <description>NEMIS shows primary residence (Presidential Only)</description>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <inlineHelpText>NEMIS shows primary residence (Presidential Only)</inlineHelpText>
        <label>NEMIS Primary</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Net_of_Recoveries__c</fullName>
        <label>Net of Recoveries</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Affiliate_Owner_Pass_Through_Income__c</fullName>
        <description>No affiliate listed on application or owner has pass-through income?</description>
        <inlineHelpText>No affiliate listed on application or owner has pass-through income?</inlineHelpText>
        <label>No Affiliate/Owner Pass Through Income</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitigated</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Character_Issues__c</fullName>
        <globalPicklist>Evaluation_Picklist</globalPicklist>
        <label>No Character Issues Pending</label>
        <type>Picklist</type>
    </fields>
</CustomObject>